# SCTransformPy

./: pyproject.toml
src/sctransform/: SCTransform.py
src/sctransformpy/: __init__.py
