[tool.poetry]
name = "sctransformpy"
version = "0.1.0"
description = "Python translation of the R package {SCTransform}"
authors = ["Alexander J. Tarashansky <tarashan@stanford.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
statsmodels = "^0.13.2"
KDEpy = "1.1.0"
scipy = "^1.8.0"
numpy = "^1.22.2"
pandas = "^1.4.1"
anndata = "^0.7.8"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.0.1"
hypothesis = "^6.36.2"
isort = "^5.10.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
